# ebu-tt-live-toolkit

./: .buildinfo  .gitignore  Makefile  Migrating autobahn and twisted.md  Pipfile  README.md  configurator.html  conversion_from_ebutt.html  conversion_to_ebuttd.html  deduplication.html  denesting.html  direct_carriage_mechanism.html  ebu_tt_live.bindings.converters.html  ebu_tt_live.bindings.html  ebu_tt_live.bindings.raw.html  ebu_tt_live.bindings.validation.html  ebu_tt_live.carriage.html  ebu_tt_live.clocks.html  ebu_tt_live.config.html  ebu_tt_live.documents.html  ebu_tt_live.examples.html  ebu_tt_live.html  ebu_tt_live.node.html  ebu_tt_live.scripts.html  ebu_tt_live.twisted.html  filesystem_carriage_mechanism.html  genindex.html  index.html  make.bat  nodes_and_carriage_mechanisms.html  objects.inv  overview.html  p0bmslf8_gaps.json  package-lock.json  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  scripts_and_their_functions.html  search.html  (+8 more)
.doctrees/: configurator.doctree  conversion_from_ebutt.doctree  conversion_to_ebuttd.doctree  deduplication.doctree  denesting.doctree  direct_carriage_mechanism.doctree  ebu_tt_live.bindings.converters.doctree  ebu_tt_live.bindings.doctree  ebu_tt_live.bindings.raw.doctree  ebu_tt_live.bindings.validation.doctree  ebu_tt_live.carriage.doctree  ebu_tt_live.clocks.doctree  ebu_tt_live.config.doctree  ebu_tt_live.doctree  ebu_tt_live.documents.doctree  ebu_tt_live.examples.doctree  ebu_tt_live.node.doctree  ebu_tt_live.scripts.doctree  ebu_tt_live.twisted.doctree  environment.pickle  filesystem_carriage_mechanism.doctree  index.doctree  nodes_and_carriage_mechanisms.doctree  overview.doctree  scripts_and_their_functions.doctree  segmentation.doctree  timing_resolution.doctree  user_input_producer.doctree  validation.doctree  validation_framework.doctree  websocket_carriage_mechanism.doctree
.github/workflows/: docs_and_ui.yml  test.yml
_modules/: index.html
_modules/ebu_tt_live/: bindings.html  errors.html  examples.html  utils.html
_sources/: configurator.rst.txt  validation_framework.rst.txt
app/config/: node.py
app/scripts/: ebu_run.py  ebu_simple_producer.py
docs/source/: conf.py  configurator.rst  conversion_from_ebutt.rst  ebu_tt_live.scripts.rst  scripts_and_their_functions.rst
ebu_tt_live/: errors.py  gen_uax24.py  project.py  strings.py  uax24.py  utils.py
ebu_tt_live/adapters/: document_data.py
ebu_tt_live/bindings/: __init__.py  _ebuttdt.py  _ebuttlm.py  _ebuttm.py  _ebutts.py  _ittp.py  _itts.py  _ttm.py  _ttp.py  _tts.py  pyxb_utils.py
ebu_tt_live/config/: __init__.py  carriage.py  common.py  node.py
ebu_tt_live/documents/: converters.py  ebutt3.py  ebutt3_segmentation.py  ebuttd.py
ebu_tt_live/examples/: __init__.py
ebu_tt_live/node/: deduplicator.py  denester.py  ebutt1_ebutt3_producer.py  element_remover.py
ebu_tt_live/scripts/: common.py  ebu_dummy_encoder.py  ebu_interactive_shell.py  imsc_hrm_validator.py  validator.py
ebu_tt_live/test/: test_utils.py
ebu_tt_live/twisted/: websocket.py
ebu_tt_live/xsd/: ebutt_d.xsd  ebutt_datatypes.xsd  ebutt_live.xsd  ebutt_metadata.xsd  (+5 more)
testing/: test_config.py
(+152 files in other folders)
