[tool.poetry]
name = "ebu-tt-live"
version = "3.0.1"
description = "EBU-TT Part 3 library implementing Specification EBU-3370"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.1"
pyxb = "^1.2.6"
nltk = "^3.8.1"
six = "^1.16.0"
sortedcontainers = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-subtests = "^0.11.0"
pytest-twisted = "^1.14.0"
pytest-runner = "^6.0.0"
pytest-bdd = "<4.0.0"
mock = "^5.1.0"


[tool.poetry.group.app.dependencies]
twisted = "^23.8.0"
jinja2 = "^3.1.2"
configman = "^1.3.0"
autobahn = "<23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
